kong-ingress-controller/application/ingressclass.yaml
# apiVersion: networking.k8s.io/v1
# kind: IngressClass
# metadata:
#   name: kong-http
# spec:
#   controller: konghq.com/kic-gateway-controller-http
# ---
# apiVersion: networking.k8s.io/v1
# kind: IngressClass
# metadata:
#   name: kong-http-v2
# spec:
#   controller: ingress-controllers.konghq.com/kong-http


apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong
spec:
  controller: ingress-controllers.konghq.com/kong
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong-nonhttp
spec:
  controller: ingress-controllers.konghq.com/kong
