kong-ingress-controller/application/gateway.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: kong-gateway
#   namespace: public-gateway
# spec:
#   gatewayClassName: kong-class
#   listeners:
#   - name: nginx-tajawal
#     hostname: nginx.tajawal.io
#     port: 80
#     protocol: HTTP
#     allowedRoutes:
#       namespaces:
#         from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gateway
  namespace: public-gateway
spec:
  gatewayClassName: kong-class
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
