kong-ingress-controller/application/httproute.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: nginx-tajawal
#   namespace: application
# spec:
#   parentRefs:
#     - name: kong-gateway
#       namespace: public-gateway
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /non-istio
#       backendRefs:
#         - name: echoserver-service-non-istio
#           port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-tajawal
  namespace: application
spec:
  hostnames:
  - nginx.tajawal.io
  parentRefs:
    - name: kong-gateway
      namespace: public-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /non-istio
      backendRefs:
        - name: echoserver-service-non-istio
          port: 80


## this is created and caused conflicts ####
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: nginx-tajawal
#   namespace: default
# spec:
#   hostnames:
#   - nginx.tajawal.io
#   parentRefs:
#     - name: kong-gateway
#       namespace: public-gateway
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /non-istio
#       backendRefs:
#         - name: echoserver-service-non-istio-lo
#           port: 80


## this is created and caused conflicts ####
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: nginx-tajawal-lo
#   namespace: application
# spec:
#   hostnames:
#   - nginx.tajawal.io
#   parentRefs:
#     - name: kong-gateway
#       namespace: public-gateway
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /non-istio
#       backendRefs:
#         - name: echoserver-service-non-istio-lo
#           port: 80
